# aTrain

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  deploy.sh  docker-compose.yml  freeze.py  freeze.spec  macos_freeze.spec  pyproject.toml
aTrain/: __main__.py  app.py
aTrain/components/: splash_screen.py
aTrain/components/dialogs/: delete.py  download.py  error.py  finished.py  process.py
aTrain/components/layout/: footer.py  header.py  sidebar.py
aTrain/components/settings/: advanced.py  file.py  language.py  model.py  speaker_count.py  speaker_detection.py
aTrain/layouts/: base.py
aTrain/pages/: about.py  archive.py  faq.py  models.py  transcribe.py  viewer.py
aTrain/static/: faq.yaml  faq_fr.yaml
aTrain/utils/: archive.py  i18n.py  models.py  transcription.py
models_cache/matplotlib/: fontlist-v390.json
settings/: storage-general.json  storage-user-f20486b8-476e-4b0b-b4bd-e4d2c3806af2.json
transcriptions/2602131601-SampleA/: log.txt  metadata.txt  transcription.json  transcription.srt  transcription.txt  transcription_maxqda.txt  transcription_timestamps.txt
